# SeniorProject

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  README.md  perclos.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt
archive/legacy/: sensors_rpi_only_legacy.py
docs/: AI.md  ARCHITECTURE.md  COMPONENTS.md  CONNECTIVITY.md  FEATURES.md  HARDWARE.md  IMPLEMENTATION_ROADMAP.md  LIMITATIONS.md  POWER.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  SOFTWARE_ARCHITECTURE.md  STORAGE.md  TELEMETRY.md  TESTING.md  USAGE.md  tasks.md
docs/report/: README.md  RUBRIC-CHECKLIST.md  acro.tex  references.bib  refrences.bib  sgp2-report.tex
docs/todo/: 01-feature-definition.todo.md  02-hardware-architecture.todo.md  03-power-supply.todo.md  04-connectivity.todo.md  05-data-storage.todo.md  06-software-architecture.todo.md  07-ai-advanced-algorithms.todo.md  08-gp1-carry-forward.todo.md  09-execution-subtasks.todo.md  10-hardware-power-evidence.template.md  README.md
refrences/: report-template.tex
scripts/: sanitize_main_footer.py  validate_main_footer.py
src/: README.md  __init__.py
src/gp2/: __init__.py  detection.py  main.py  sensors.py  telemetry.py
src/gp2/planning/: __init__.py  ai_algorithms.py  carry_forward.py  features.py  (+6 more)
tests/: README.md  test_runtime.py
unit-tests/: README.md  TESTING.md  main.py  telemetry.py  tests.py
unit-tests/legacy/: README.md  sensors_rpi_only_legacy.py
unit-tests/placeholders/: README.md  __init__.py  connectivity.py  features.py  hardware_architecture.py  power_plan.py  storage_strategy.py
